k8s/service-mesh/yas-dev/02-authz-default-deny.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: default-deny
  namespace: yas-dev
spec: {}
