k8s/service-mesh/yas-dev/03-authz-product.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-product-from-selected-services
  namespace: yas-dev
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: product
      app.kubernetes.io/name: product
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/yas-dev/sa/storefront-bff
              - cluster.local/ns/yas-dev/sa/backoffice-bff
              - cluster.local/ns/yas-dev/sa/cart
              - cluster.local/ns/yas-dev/sa/order
