k8s/service-mesh/yas-dev/04-authz-inventory.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-inventory-from-selected-services
  namespace: yas-dev
spec:
  selector:
    matchLabels:
      app: inventory
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/yas-dev/sa/backoffice-bff
              - cluster.local/ns/yas-dev/sa/order
