k8s/service-mesh/yas-dev/05-authz-order.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-order-from-bff
  namespace: yas-dev
spec:
  selector:
    matchLabels:
      app: order
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/yas-dev/sa/storefront-bff
              - cluster.local/ns/yas-dev/sa/backoffice-bff
